--- a/index.html
+++ b/index.html
@@ -575,8 +575,7 @@
 								<div class="text text-center p-4">
 									<h3><a href="https://hari-unnikrishnan.github.io/Biosynthesis/">Cultivating Next-Gen Growth in Agriculture</a>
 									</h3>
-									<span>We are cultivating next-gen growth in agriculture by integrating innovative technologies, sustainable practices,
-										 and smart farming solutions to ensure a greener, more productive future</span>
+									<span>We are cultivating next-gen growth in agriculture by integrating innovative technologies, more productive future</span>
 								</div>
 							</div>
 						</div>
