--- a/index.html
+++ b/index.html
@@ -553,17 +553,17 @@
 						</div>
 					</div>
 
-					<!-- <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/cycle\ web\ page.jpg);">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/Mithra\ –\ Guardian\ Companion.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="vendor/Cycle/bycycle.html">cycle web page</a></h3>
+							<h3><a href="https://hari-unnikrishnan.github.io/Mithra-task/">Mithra – Guardian Companion</a></h3>
 
-							<span>Discover the perfect cycle for your journey – Built for speed, comfort, and adventure.
-								Experience the ultimate ride with lightweight, durable cycles designed for adventure,
-								comfort, and style.</span>
+							<span>Seasonal state background (Monsoon / Harvest / Drought).
+								Seasonal advice (monsoon = irrigation tip, harvest = storage tip, drought = water-saving tip),
+								Straight-line progress bar with Seed → Sprout → Growth → Mature → Harvest Ready.</span>
 						</div>
-					</div> -->
+					</div>
 				</div>
 
 				<div class="col-md-4">
