--- a/index.html
+++ b/index.html
@@ -579,22 +579,46 @@
 								</div>
 							</div>
 						</div>
-						<!-- <div class="col-md-12">
+						<div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img4.png);">
+								style="background-image: url(images/LOGISTICS.png);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="vendor/bakery/index.html">Food</a>
+									<h3><a href="https://hari-unnikrishnan.github.io/CARGO-LOGISTICS/index.html">CARGOLOGISTICS</a>
 									</h3>
-									<span>Welcome to Sweet Bakery, where we bake happiness with quality, teamwork, and
-										passion in every bite..</span>
+									<span>A simple solution for managing cargo, shipments, and logistics efficiently.</span>
 								</div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 
-
+				<!-- <div class="col-md-4">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/Biosynthesis.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://hari-unnikrishnan.github.io/Biosynthesis/">Cultivating Next-Gen Growth in Agriculture</a>
+									</h3>
+									<span>We are cultivating next-gen growth in agriculture by integrating innovative technologies, more productive future</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/LOGISTICS.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://hari-unnikrishnan.github.io/CARGO-LOGISTICS/index.html">CARGOLOGISTICS</a>
+									</h3>
+									<span>A simple solution for managing cargo, shipments, and logistics efficiently.</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div> -->
 			</div>
 
 		</div>
