--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 					<div class="progress-wrap ftco-animate">
 						<h3>HTML5</h3>
 						<div class="progress">
-							<div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-								aria-valuemax="100" style="width:90%">
+							<div class="progress-bar color-1" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+								aria-valuemax="100" style="width:95%">
 								<span>95%</span>
 							</div>
 						</div>
@@ -264,8 +264,8 @@
 					<div class="progress-wrap ftco-animate">
 						<h3>CSS3</h3>
 						<div class="progress">
-							<div class="progress-bar color-2" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-								aria-valuemax="100" style="width:85%">
+							<div class="progress-bar color-2" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+								aria-valuemax="100" style="width:90%">
 								<span>90%</span>
 							</div>
 						</div>
@@ -275,7 +275,7 @@
 					<div class="progress-wrap ftco-animate">
 						<h3>JavaScript</h3>
 						<div class="progress">
-							<div class="progress-bar color-3" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+							<div class="progress-bar color-3" role="progressbar" aria-valuenow="85" aria-valuemin="0"
 								aria-valuemax="100" style="width:85%">
 								<span>85%</span>
 							</div>
@@ -286,7 +286,7 @@
 					<div class="progress-wrap ftco-animate">
 						<h3>jQuery</h3>
 						<div class="progress">
-							<div class="progress-bar color-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+							<div class="progress-bar color-4" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:80%">
 								<span>80%</span>
 							</div>
@@ -306,12 +306,33 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
+						<h3>React/JavaScript</h3>
+						<div class="progress">
+							<div class="progress-bar color-5" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+								aria-valuemax="100" style="width:80%">
+								<span>80%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>WordPress</h3>
+						<div class="progress">
+							<div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+								aria-valuemax="100" style="width:70%">
+								<span>70%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
 						<h3>Python Django and Flask</h3>
 						<div class="progress">
-							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-								aria-valuemax="100" style="width:69%">
+							<div class="progress-bar color-6" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+								aria-valuemax="100" style="width:50%">
 								<span>50%</span>
-								`
 							</div>
 						</div>
 					</div>
