--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm a <span>web designer, Web Developer </span></h1>
+								<h1 class="mb-4 mt-3">I'm a <span>React Developer, Web Developer </span></h1>
 								<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#"
 										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 							</div>
@@ -147,8 +147,8 @@
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 
-							<p><a href="assets/HARI.pdf" class="btn btn-primary py-3 px-3">Download
-									CV</a></p>
+							<p><a href="assets/HARI edit resume.pdf.pdf" class="btn btn-primary py-3 px-3">
+									Download CV</a></p>
 						</div>
 					</div>
 				</div>
