--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						<div class="progress">
 							<div class="progress-bar color-5" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:80%">
-								<span>80%</span>
+								<span>90%</span>
 							</div>
 						</div>
 					</div>
@@ -802,7 +802,7 @@
 							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
 							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>UI/UX developer</a></li>
 							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Frontend Developer</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>JavaScript Developer</a>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>React/JavaScript Developer</a>
 							</li>
 							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Responsive Web Design</a>
 							</li>
