--- a/index.html
+++ b/index.html
@@ -614,6 +614,33 @@
 					</div>
 				</div>
 
+				<div class="col-md-4">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/Ariverse-Academy.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://hari-unnikrishnan.github.io/Ariverse-Academy-/">Ariverse-Academy</a>
+									</h3>
+									<span>Our AI-powered platform delivers custom learning paths, instant tutoring support, and detailed insights to help you master skills with confidence.</span>
+								</div>
+							</div>
+						</div>
+						<!-- <div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/LOGISTICS.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://hari-unnikrishnan.github.io/CARGO-LOGISTICS/index.html">CARGOLOGISTICS</a>
+									</h3>
+									<span>A simple solution for managing cargo, shipments, and logistics efficiently.</span>
+								</div>
+							</div>
+						</div> -->
+					</div>
+				</div>
+				<!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
 				<!-- <div class="col-md-4">
 					<div class="row">
 						<div class="col-md-12">
