--- a/index.html
+++ b/index.html
@@ -627,17 +627,16 @@
 								</div>
 							</div>
 						</div>
-						<!-- <div class="col-md-12">
+						<div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/LOGISTICS.png);">
-								<div class="overlay"></div>
+								style="background-image: url(images/cafeshope.png);">i
 								<div class="text text-center p-4">
-									<h3><a href="https://hari-unnikrishnan.github.io/CARGO-LOGISTICS/index.html">CARGOLOGISTICS</a>
+									<h3><a href="https://hari-unnikrishnan.github.io/cafeshope/">CARGOLOGISTICS</a>
 									</h3>
-									<span>A simple solution for managing cargo, shipments, and logistics efficiently.</span>
+									<span>Where premium beans meet expert brewing for an unforgettable coffee experience.</span>
 								</div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 				<!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
