--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<!-- <div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 								style="background-image: url(images/cafeshope.png);">i
 								<div class="text text-center p-4">
@@ -636,24 +636,24 @@
 									<span>Where premium beans meet expert brewing for an unforgettable coffee experience.</span>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
-				<!-- <div class="col-md-4">
+				<div class="col-md-4">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/Biosynthesis.png);">
+								style="background-image: url(images/cafeshope.png);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="https://hari-unnikrishnan.github.io/Biosynthesis/">Cultivating Next-Gen Growth in Agriculture</a>
+									<h3><a href="https://hari-unnikrishnan.github.io/cafeshope/">cafeshope</a>
 									</h3>
-									<span>We are cultivating next-gen growth in agriculture by integrating innovative technologies, more productive future</span>
+									<span>Where premium beans meet expert brewing for an unforgettable coffee experience.</span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<!-- <div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 								style="background-image: url(images/LOGISTICS.png);">
 								<div class="overlay"></div>
@@ -663,9 +663,9 @@
 									<span>A simple solution for managing cargo, shipments, and logistics efficiently.</span>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
-				</div> -->
+				</div>
 			</div>
 
 		</div>
