--- a/index.html
+++ b/index.html
@@ -614,32 +614,27 @@
 					</div>
 				</div>
 
-				<div class="col-md-4">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/Ariverse-Academy.png);">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a href="https://hari-unnikrishnan.github.io/Ariverse-Academy-/">Ariverse-Academy</a>
-									</h3>
-									<span>Our AI-powered platform delivers custom learning paths, instant tutoring support, and detailed insights to help you master skills with confidence.</span>
-								</div>
-							</div>
+				<div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/Ariverse-Academy.png);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="https://hari-unnikrishnan.github.io/Ariverse-Academy-/">login page</a></h3>
+							<span>Log in with your username and password to access your account.</span>
 						</div>
-						<!-- <div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/cafeshope.png);">i
-								<div class="text text-center p-4">
-									<h3><a href="https://hari-unnikrishnan.github.io/cafeshope/">CARGOLOGISTICS</a>
-									</h3>
-									<span>Where premium beans meet expert brewing for an unforgettable coffee experience.</span>
-								</div>
-							</div>
-						</div> -->
 					</div>
+
+					<!-- <div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/Mithra\ –\ Guardian\ Companion.png);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="https://hari-unnikrishnan.github.io/Mithra-task/">Ariverse-Academy</a></h3>
+
+							<span>Our AI-powered platform delivers custom learning paths, instant tutoring support, and detailed insights to help you master skills with confidence.</span>
+						</div>
+					</div> -->
 				</div>
-				<!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
+
 				<div class="col-md-4">
 					<div class="row">
 						<div class="col-md-12">
